# nextstd

./: BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  USAGE.md  cliff.toml  ns.h  ns_io.h
.githooks/: pre-commit
.github/workflows/: changelog.yml  markdown_lint.yml
crates/ns_cmd/: Cargo.toml
crates/ns_cmd/src/: cmd.rs  lib.rs
crates/ns_io/: Cargo.toml
crates/ns_io/src/: input.rs  lib.rs  print.rs
crates/ns_string/src/: lib.rs
examples/: 01_print_integer.c  02_print_float_double.c  03_print_string.c  04_user_input.c  11_underline.c  12_string_length.c  13_read_ns_string.c  14_string_interpolation.c  15_cmd.c
include/: ns_cmd.h  ns_color.h  ns_print.h  ns_read.h
